--- a/backend/templates/login.html
+++ b/backend/templates/login.html
@@ -5,14 +5,15 @@
         margin: 0;
         padding: 0;
         height: 100%;
-        overflow: hidden; 
+        overflow: hidden;
+        background-color: #08063f;
     }
     .login-container {
         display: flex;
         justify-content: center;
         align-items: center;
         height: calc(100vh - 100px); 
-        background-color: whitesmoke;
+        background-color: #08063f;
         padding-top: 50px; 
     }
     .login-box {
