--- a/backend/templates/dashboard.html
+++ b/backend/templates/dashboard.html
@@ -1,30 +1,30 @@
-{% extends 'base.html' %}
 {% include 'topbar.html' %}
 {% load static %}
 {% block content %}
-<div class="dashboard-container">
-    <!-- Removed calendar empty box if no events -->
-    <div id="calendar" class="custom-calendar" style="display: none;"></div>
-    <!-- View Mode Switch and "Today" Button -->
-    {% include 'dashboard/view_switch.html' %}
+<div class="container-main"> <!-- Add this wrapper -->
 
-    <!-- Scrollable Container for Calendar -->
-    <div class="scrollable-calendar">
-        <!-- Calendar -->
-        <div id="calendar" class="custom-calendar"></div>
+    <div class="dashboard-container">
+        <!-- Removed calendar empty box if no events -->
+        <div id="calendar" class="custom-calendar" style="display: none;"></div>
 
+        <!-- View Mode Switch and "Today" Button -->
+        {% include 'dashboard/view_switch.html' %}
 
-        {% include 'dashboard/weekly_view.html' %}
-        {% include 'dashboard/daily_view.html' %}
+        <!-- Scrollable Container for Calendar -->
+        <div class="scrollable-calendar">
+            <div id="calendar" class="custom-calendar"></div>
+            {% include 'dashboard/weekly_view.html' %}
+            {% include 'dashboard/daily_view.html' %}
+        </div>
     </div>
-</div>
 
- <!-- Sidebar -->
- {% include 'dashboard/sidebar.html' %}
+    <!-- Sidebar -->
+    {% include 'dashboard/sidebar.html' %}
+
+</div> <!-- End container-main -->
 
 <!-- Link to CSS and JS -->
 <link rel="stylesheet" type="text/css" href="{% static 'css/dashboard.css' %}">
 <script src="{% static 'js/dashboard.js' %}"></script>
-
 
 {% endblock %}
