--- a/backend/templates/registration/profile.html
+++ b/backend/templates/registration/profile.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% include 'topbar.html' %}
 {% block content %}
 <div class="profile-container">
     <div class="profile-header">
